# basic-rocket-web-server

./: Cargo.toml  README.md  rust-toolchain
src/: main.rs
